# confetti

./: .gitignore  CMakeLists.txt  CNAME  ConfettiConfig.cmake.in  LICENSE  Makefile.am  README.md  autogen.sh  conf_parse.3  confetti.3  confetti.c  confetti.h  confetti.pc.in  configure.ac  index.html  pyargument.c  pycomment.c  pyconfetti.c  pyconfetti.h  pyconfetti.pyi  pydirective.c  pymain.c  setup.py  sitemap.xml  test.py  unicode.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-suggestion.yml
.github/workflows/: build.yml
assets/: confetti.css  confetti.css.map  confetti.js  confetti.js.map
examples/: CMakeLists.txt  _readstdin.c  echo.c  index.html  parse.c  walk.c
learn/: index.html
man/: Makefile.am  conf_free.3  conf_get_argument.3  conf_get_argument_count.3  conf_get_comment.3  conf_get_comment_count.3  conf_get_directive.3  conf_get_directive_count.3  conf_get_root.3  conf_getarg.3  conf_parse.3  conf_walk.3  confetti.3
manual/: conf_free.html  conf_get_argument.html  conf_get_argument_count.html  conf_get_comment.html  conf_get_comment_count.html  conf_get_directive.html  conf_get_directive_count.html  conf_get_root.html  conf_parse.html  conf_walk.html  confetti.html  index.html
manual/conf-free/: index.html
manual/conf-get-argument/: index.html
manual/conf-get-argument-count/: index.html
manual/conf-get-comment/: index.html
manual/conf-get-comment-count/: index.html
manual/conf-get-directive/: index.html
manual/conf-get-directive-count/: index.html
manual/conf-get-root/: index.html
manual/conf-parse/: index.html
manual/conf-walk/: index.html
specification/: README.md  index.html  specification.adoc
tests/: .gitignore  CMakeLists.txt  CONFORMANCE.md  README.md  check_coverage.sh  check_example.sh  fuzz.sh  fuzz_confetti.c  fuzz_parse.c  fuzz_walk.c  generate_coverage.sh  generate_snapshots.py  generate_tests.py  test.sh  test_abort.c  test_api.c  test_bidi.c  test_custom_allocator.c  test_extensions.c  test_memory.c  test_out_of_memory.c  test_parse.c  test_parse_api.c  test_parser.c  test_suite.h  test_utils.c  test_utils.h  test_walk.c  test_walk_api.c
tests/corpus/: control_flow.conf  stack_based_language.conf
tests/snapshots/: ai_training.txt  application_settings.txt  backslash_before_last_argument_character.txt  build_script.txt  c_comments_intermixed_with_directives.txt  c_multi_line_comment.txt  c_multi_line_comment_missing_astrisk.txt  c_multi_line_comment_unterminated.txt  c_multi_line_comment_with_illegal_character.txt  c_multi_line_empty_comment.txt  c_single_line_comment.txt  c_single_line_comment_with_a_malformed_character.txt  c_single_line_empty_comment.txt  comment.txt  comment_after_directive.txt  comment_with_a_malformed_character.txt  comment_with_illegal_character.txt  comment_with_line_continuation.txt  control_character.txt  control_flow.txt  control_z.txt  control_z_unexpected.txt  directive_with_byte_order_mark.txt  directive_with_closing_quote_escaped.txt  directive_with_empty_quoted_argument.txt  directive_with_empty_triple_quoted_argument.txt  directive_with_escaped_quoted_argument.txt  directive_with_incomplete_escape_sequence_in_quoted_argument.txt  directive_with_line_continuation.txt  directive_with_multiple_arguments.txt  directive_with_multiple_line_continuations.txt  directive_with_quoted_argument.txt  document_markup.txt  domain_specific_language_with_all_extensions.txt  double_quoted_directive_argument.txt  empty_braces.txt  empty_braces_multi_line.txt  empty_comment.txt  error_missing_closing_curly_brace.txt  error_quoted_illegal.txt  (+128 more)
tests/suite/: control_flow.out  stack_based_language.out  term_after_empty_subdirectives.err  term_after_subdirectives_twice.err
